added photo on register vehicle
