# controllers/vehicle/vehicle.controller.js
@@ -1,3 +1,5 @@
+const path = require("path");
+const cloudinary = require("../../utils/cloudinary");
 //registering vehicle by admin
 
 const {
@@ -12,139 +14,181 @@ const {
 } = require("../../models/vehicle/vehicle.model");
 
 exports.registerVehicle = async (req, res) => {
-    try {
-        const {
-            vehiclePlateNumber,
-            manufactureCompany,
-            manufactureYear,
-            price,
-            chasisNumber,
-            modelName,
-            owner
-        } = req.body;
-        //validate req.body
-        const {
-            error
-        } = validateVehicle(req.body);
+            try {
+                const {
+                    vehiclePlateNumber,
+                    manufactureCompany,
+                    manufactureYear,
+                    price,
+                    chasisNumber,
+                    modelName,
+                    owner
+                } = req.body;
+                //validate req.body
+                const {
+                    error
+                } = validateVehicle(req.body);
 
-        if (error) {
-            return res.status(400).json({
-                success: false,
-                status: 400,
-                message: error.details[0].message
-            });
-        }
-        //check if owner exists
-        const user = await Owner.findById(owner);
-        if (!user) {
-            return res.status(404).json({
-                success: false,
-                status: 404,
-                message: "Owner not found"
-            });
-        }
-        //check if vehicle already exists
-        let vehicle = await Vehicle.findOne({
-            vehiclePlateNumber: req.body.vehiclePlateNumber
-        });
-        if (vehicle) {
-            return res.status(400).json({
-                success: false,
-                status: 400,
-                message: "Vehicle already exists"
-            });
-        }
-        //create new vehicle
-        vehicle = new Vehicle({
-            vehiclePlateNumber,
-            manufactureCompany,
-            manufactureYear,
-            price,
-            chasisNumber,
-            modelName,
-            owner
-        });
-        //save vehicle  
-        await vehicle.save();
-        res.status(201).json({
-            success: true,
-            status: 201,
-            message: "Vehicle registered successfully",
-            data: vehicle
-        });
-    } catch (error) {
-        console.log(error);
-        res.status(500).json({
-            message: "Internal server error"
-        });
-    }
-}
-//getting all vehicles by admin 
-exports.getVehicles = async (req, res) => {
-    try {
-        const page = parseInt(req.params.page) || 1;
-        const perPage = parseInt(req.params.perPage) || 10;
-        const count = await Vehicle.countDocuments();
-        if (count === 0) {
-            res.status(404).json({
-                success: false,
-                status: 404,
-                message: "No vehicles found"
-            });
-            return;
-        }
-
-        const totalPages = Math.ceil(count / perPage);
-        if (page > totalPages) {
-            res.status(400).json({
-                success: false,
-                status: 400,
-                message: `Page ${page} does not exist`
-            });
-            return;
-        }
-
-        const vehicles = await Vehicle.find()
-            .skip((page - 1) * perPage)
-            .limit(perPage)
-            .populate("owner", "-password");
-
-        return res.status(200).json({
-            success: true,
-            status: 200,
-            message: "Vehicles retrieved successfully",
-            data: {
-                vehicles,
-                currentPage: page,
-                totalPages
+                if (error) {
+                    return res.status(400).json({
+                        success: false,
+                        status: 400,
+                        message: error.details[0].message
+                    });
+                }
+                    //check if owner exists
+                    const user = await Owner.findById(owner);
+                    if (!user) {
+                        return res.status(404).json({
+                            success: false,
+                            status: 404,
+                            message: "Owner not found"
+                        });
+                    }
+                    //check if vehicle already exists
+                    let vehicle = await Vehicle.findOne({
+                        vehiclePlateNumber: req.body.vehiclePlateNumber
+                    });
+                    if (vehicle) {
+                        return res.status(400).json({
+                            success: false,
+                            status: 400,
+                            message: "Vehicle already exists"
+                        });
+                    }
+                    //upload image to cloudinary
+                    if (!req.files)
+                        return res.status(400).json({
+                            success: false,
+                            message: "Please upload a photo",
+                        });
+                    const file = req.files.photo;
+                    //make sure that uploaded file is an image
+                    if (!file.mimetype.startsWith("image"))
+                        return res.status(400).json({
+                            success: false,
+                            message: "please upload an image file",
+                        });
+                    //checking photo size
+                    if (file.size > process.env.MAX_FILE_SIZE)
+                        return res.status(400).json({
+                            success: false,
+                            message: `please upload an image less than ${process.env.MAX_FILE_SIZE}`,
+                        });
+                    //customizing image name to avoid overwriting
+                    file.name = `photo}${
+                  path.parse(file.name).ext
+                }`;
+                    //checking if project has cloudinar id
+                    cloudinary.uploader
+                        .upload(file.tempFilePath)
+                        .then(async (result) => {
+                            const body = {
+                                profile: result.secure_url,
+                                cloudinary_id: result.public_id,
+                            };
+                            //updating project
+                            //create new vehicle
+                            vehicle = new Vehicle({
+                                vehiclePlateNumber,
+                                manufactureCompany,
+                                manufactureYear,
+                                price,
+                                chasisNumber,
+                                modelName,
+                                owner,
+                                photo: result.secure_url,
+                                cloudinary_id: result.public_id,
+                            });
+                            //save vehicle  
+                            await vehicle.save();
+                            res.status(201).json({
+                                success: true,
+                                status: 201,
+                                message: "Vehicle registered successfully",
+                                data: vehicle
+                            });
+                        })
+                        .catch((error) => {
+                            console.log(error);
+                            res.status(500).json({
+                                success: false,
+                                message: "Internal server error",
+                            });
+                        });
+                } catch (error) {
+                    console.log(error);
+                    res.status(500).json({
+                        message: "Internal server error"
+                    });
+                }
             }
-        });
-    } catch (error) {
-        console.log(error);
-        res.status(500).json({
-            message: "Internal server error"
-        });
-    }
+            //getting all vehicles by admin 
+            exports.getVehicles = async (req, res) => {
+                try {
+                    const page = parseInt(req.params.page) || 1;
+                    const perPage = parseInt(req.params.perPage) || 10;
+                    const count = await Vehicle.countDocuments();
+                    if (count === 0) {
+                        res.status(404).json({
+                            success: false,
+                            status: 404,
+                            message: "No vehicles found"
+                        });
+                        return;
+                    }
 
-}
-//getting all vehicles without pagination for mobile
-exports.getVehiclesWithoutPag = async (req, res) => {
-    try {
-        const vehicles = await Vehicle.find()
-            .populate("owner", "-password");
+                    const totalPages = Math.ceil(count / perPage);
+                    if (page > totalPages) {
+                        res.status(400).json({
+                            success: false,
+                            status: 400,
+                            message: `Page ${page} does not exist`
+                        });
+                        return;
+                    }
 
-        return res.status(200).json({
-            success: true,
-            status: 200,
-            message: "Vehicles retrieved successfully",
-            data: {
-                vehicles
+                    const vehicles = await Vehicle.find()
+                        .skip((page - 1) * perPage)
+                        .limit(perPage)
+                        .populate("owner", "-password");
+
+                    return res.status(200).json({
+                        success: true,
+                        status: 200,
+                        message: "Vehicles retrieved successfully",
+                        data: {
+                            vehicles,
+                            currentPage: page,
+                            totalPages
+                        }
+                    });
+                } catch (error) {
+                    console.log(error);
+                    res.status(500).json({
+                        message: "Internal server error"
+                    });
+                }
+
             }
-        });
-    } catch (error) {
-        console.log(error);
-        res.status(500).json({
-            message: "Internal server error"
-        });
-    }
-}
+            //getting all vehicles without pagination for mobile
+            exports.getVehiclesWithoutPag = async (req, res) => {
+                try {
+                    const vehicles = await Vehicle.find()
+                        .populate("owner", "-password");
+
+                    return res.status(200).json({
+                        success: true,
+                        status: 200,
+                        message: "Vehicles retrieved successfully",
+                        data: {
+                            vehicles
+                        }
+                    });
+                } catch (error) {
+                    console.log(error);
+                    res.status(500).json({
+                        message: "Internal server error"
+                    });
+                }
+            }
